force-app/main/default/objects/FEC_CustomerAdditionalInfoConfig__c/FEC_CustomerAdditionalInfoConfig__c.object-meta.xml
<CustomObject>
    <label>Customer Additional Info Config</label>
    <nameField>
        <label>Customer Additional Info Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Additional Info Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>