force-app/main/default/objects/FEC_CustomerAdditionalInfoConfig__c/fields/FEC_EndDate__c.field-meta.xml
<CustomField>
    <fullName>FEC_EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>