force-app/main/default/objects/FEC_CustomerAdditionalInfoConfig__c/fields/FEC_FieldID__c.field-meta.xml
<CustomField>
    <fullName>FEC_FieldID__c</fullName>
    <label>Field ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>