force-app/main/default/objects/FEC_CustomerAdditionalInfoConfig__c/fields/FEC_FieldName__c.field-meta.xml
<CustomField>
    <fullName>FEC_FieldName__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>