force-app/main/default/objects/FEC_CustomerAdditionalInfoConfig__c/fields/FEC_KeyIdentifier__c.field-meta.xml
<CustomField>
    <fullName>FEC_KeyIdentifier__c</fullName>
    <label>Key Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>