force-app/main/default/objects/FEC_CustomerAdditionalInfoConfig__c/fields/FEC_StartDate__c.field-meta.xml
<CustomField>
    <fullName>FEC_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>